--- a/static/index.html
+++ b/static/index.html
@@ -9,12 +9,13 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="/index.js" type="module"></script>
     <script src="dist/mio-ui.js"></script>
+    <link rel="stylesheet" href="dist/mio-ui.css">
 </head>
 <body>
 <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
-<div id="MiO-UI"></div>
+<div id="MiO-UI" style="padding: 20PX"></div>
 <script type="module">
     const { createApp } = Vue;
 
@@ -35,7 +36,6 @@
             }
         },
         mounted() {
-            console.log(app);
             setTimeout(() => {
                 this.list.push({
                     label: "Test3",
@@ -43,7 +43,16 @@
                 })
             }, 2000);
         },
-        template: "<mio-selector v-model='test' :options='list' />"
+        template: `
+            <div style="width:100%; height: 100%; display: flex; flex-direction: column;">
+                <div style="flex: 1;">
+                    <mio-selector v-model="test" :options="list" />
+                </div>
+                <div style="flex: 0 0 64PX;">
+                    <mio-selector v-model="test" :options="list" />
+                </div>
+            </div>
+        `
     });
 
     app.component('mio-selector', mio_ui.MiOSelector);
