--- a/examples/selector/index.html
+++ b/examples/selector/index.html
@@ -64,8 +64,13 @@
                     }
                 },
                 template: `
-                    <div style="width:100%; height: 100%; display: flex; flex-direction: column;">
-                        <mio-selector v-model="value" :options="options" />
+                    <div style="width:100%; height: 100%; display: flex; flex-direction: column; justify-content: space-between;">
+                        <div>
+                            <mio-selector v-model="value" :options="options" />
+                        </div>
+                        <div>
+                            <mio-selector v-model="value" :options="options" />
+                        </div>
                     </div>
                 `
             });
