--- a/examples/list/index.html
+++ b/examples/list/index.html
@@ -9,27 +9,12 @@
         <link rel="stylesheet" href="dist/mio-ui.css">
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
         <script src="dist/mio-ui.js"></script>
-        <script src="./index.js"></script>
+        <script src="./index.js" type="module"></script>
     </head>
     <body>
         <noscript>
             <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
-        <div id="MiO-UI" style="padding: 20PX"></div>
-        <script type="module">
-            const { createApp } = Vue;
-
-            const app = createApp({
-                template: `
-                    <div style="width:100%; height: 100%; display: flex; flex-direction: column;">
-                        <mio-tree />
-                    </div>
-                `
-            });
-
-            app.component(mio_ui.MiOTree.name, mio_ui.MiOTree);
-
-            app.mount('#MiO-UI');
-        </script>
+        <div id="MiO-UI"></div>
     </body>
 </html>
