--- a/examples/list/index.html
+++ b/examples/list/index.html
@@ -8,6 +8,7 @@
         <link type="text/css" rel="stylesheet" href="/index.css">
         <link rel="stylesheet" href="dist/mio-ui.css">
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+        <script src="https://unpkg.com/vue-router@4"></script>
         <script src="dist/mio-ui.js"></script>
         <script src="./index.js" type="module"></script>
     </head>
